--- a/Optimism_ERC20/package.json
+++ b/Optimism_ERC20/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.5.1",
     "@openzeppelin/contracts": "^4.8.0",
     "dotenv": "^16.0.3"
   }
